...
  globalAgent,
  globalDaemon,
  systemAgent,
  systemDaemon;

  String get displayName => switch (this) {
        userAgent => 'User Agent',
        globalAgent => 'Global Agent',
        globalDaemon => 'Global Daemon',
        systemAgent => 'System Agent',
        systemDaemon => 'System Daemon',
      };

...
      this == JobScope.systemAgent || this == JobScope.systemDaemon;

  bool get requiresRoot =>
      this == JobScope.globalAgent || this == JobScope.globalDaemon;

  static JobScope fromPath(String path) {
    if (path.startsWith('/System/Library/LaunchAgents')) {
      return JobScope.systemAgent;
    } else if (path.startsWith('/System/Library/LaunchDaemons')) {
      return JobScope.systemDaemon;
    } else if (path.startsWith('/Library/LaunchDaemons')) {
      return JobScope.globalDaemon;
    } else if (path.startsWith('/Library/LaunchAgents')) {
...
